<resources>
    <string name="app_name">Weather</string>
    <string name="city_name">city name</string>
    <string name="show_more">show more…</string>
    <string name="temperature_template">%1.1f°</string>
    <string name="chance_probability_template">%d%%</string>
    <string name="notification">notification</string>
    <string name="map">map</string>
    <string name="notification_title">Notification</string>
    <string name="multiplication_sign">×</string>
    <string name="search">search</string>
    <string name="time_notification_has_be_come">TIME_NOTIFICATION_HAS_BE_COME</string>
    <string name="weather">Weather</string>
    <string name="coordinates">coordinates</string>
    <string name="title_name_template">%s, %s, %s</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="something_is_wrong">something is wrong</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="submit">Submit</string>
</resources>